--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,9 @@
 {% if latest_question_list %}
     <ul>
-        {% for question in latest_question_list %}
-            <li><a href="polls/{{ question.id }}">{{ question.question_text }}</a></li>
-        {% endfor %}
+    {% for question in latest_question_list %}
+        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    {% endfor %}
     </ul>
-
 {% else %}
-    <p>No pollst are available</p>
+    <p>No polls are available.</p>
 {% endif %}
